<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes</string>
    <string name="description_repost">Reposts</string>
    <string name="description_viewing">Viewing</string>
    <string name="_10" translatable="false">10</string>
    <string name="_5" translatable="false">5</string>
    <string name="content" translatable="false">"Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netology.ru"</string>
    <string name="_21_18_36" translatable="false">21 мая в 18:36</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_text">Edit Text</string>
    <string name="cancel_image" translatable="false" />
    <string name="edit_image" translatable="false" />
    <string name="empty_post_error">Empty post error</string>
    <string name="icon_save" translatable="false" />
    <string name="chooser_share_post">Share post</string>
    <string name="Save">Save</string>
    <string name="addPost">Add Post</string>
    <string name="more">More</string>
    <string name="video_link">video_link</string>
    <string name="error_empty_content">empty content</string>
    <string name="icon_smile">smile</string>>
</resources>