<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nmedia.activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@id/top_Barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_post" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_Barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="text_content, button_save" />
    <ImageView
        android:id="@+id/smile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/icon_save"
        app:srcCompat="@drawable/ic_myicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_content"
        tools:ignore="NotSibling"
        />

    <EditText
        android:id="@+id/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/smile"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/button_save"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/icon_save"
        app:layout_constraintBottom_toBottomOf="@+id/smile"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/edit_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#8BC34A"
        android:visibility="invisible"
        app:constraint_referenced_ids="cancel, edit_pic, edit_label, editable_text"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/text_content"
        app:layout_constraintEnd_toEndOf="@id/button_save"
        app:layout_constraintStart_toStartOf="@id/button_save"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        android:contentDescription="@string/cancel_image" />

    <ImageView
        android:id="@+id/edit_pic"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:paddingStart="5dp"
        app:srcCompat = "@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editable_text"
        app:layout_constraintTop_toTopOf="@id/cancel"
        tools:ignore="RtlSymmetry"
        android:contentDescription="@string/edit_image" />
    <TextView
        android:id="@+id/edit_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/editable_text"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@+id/edit_pic"
        app:layout_constraintTop_toTopOf="@+id/edit_pic"
        android:text="@string/edit_text"
        android:textColor="#19466E"/>

    <TextView
        android:id="@+id/editable_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/edit_pic"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@+id/edit_pic"
        app:layout_constraintTop_toBottomOf="@id/edit_label"
        android:textSize="13sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
